--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yapier</title>
+    <script>
+      defer 
+      data-domain="zapier-alpha.vercel.app" 
+      src="https://www.vivlytics.com/tracking-script.js">
+    </script>
   </head>
   <body>
     <div id="root"></div>
